--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,14 @@
-@page{
-    margin: 1in;
+@media print{
+    @page{
+        size: A3 landscape;
+    }
+    @page:bottom{
+        padding-bottom: 72px;
+    }
 }
-
+@page:right {
+    margin-right: 3cm;
+  }
 hr.topLine{
     border-top: 1px solid black;
 }
